--- a/Orders.html
+++ b/Orders.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <a href="/index"><h1 class="MainTitle">Baguni</h1></a> <!--제발좀되라-->
+    <a href="index.html"><h1 class="MainTitle">Baguni</h1></a> <!--제발좀되라-->
 
   </header>
   <nav>
