--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <a href="/index"><h1 class="MainTitle">Baguni</h1></a>
+    <a href="index.html"><h1 class="MainTitle">Baguni</h1></a>
 
   </header>
   <nav>
